# data-pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements-api.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
api/: main.py
api/routes/: health.py  search.py  stats.py
api/services/: fallback_search.py
config/: settings.py  sources.yaml
connectors/: __init__.py  api_connector.py  base_connector.py  github_connector.py  rss_connector.py  sec_connector.py
docker/: alerts.yml  api.Dockerfile  entrypoint.api.sh  prometheus.yml  worker.Dockerfile
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: Footer.tsx  Navbar.tsx  PageWrapper.tsx
frontend/src/lib/: theme.ts
frontend/src/pages/: AboutPage.tsx  ContactPage.tsx  DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  ServicesPage.tsx  SignupPage.tsx
frontend/src/styles/: globals.css
k8s/base/: api-and-cronjobs.yaml  normalizer.yaml
scripts/: run_connectors.py
tests/: conftest.py
tests/integration/: test_pipeline_e2e.py
tests/load/: locustfile.py
tests/unit/: test_api.py  test_connectors.py  test_normalizer.py
workers/: db.py  dedup.py  normalizer.py  prompts.py  self_healing.py  vectorizer.py
